# ra8d1-eit

./: .cproject  .gitignore  .gitmodules  .project  .secure_azone  .secure_xml  CMakeLists.txt  CMakePresets.json  RA8D1_EIT_PORT.md  configuration.xml  ra8d1_eit Debug_Flat.launch  ra_cfg.txt
Debug/: compile_commands.json  makefile  makefile.init  ra8d1_eit.elf  ra8d1_eit.elf.in  ra8d1_eit.map  ra8d1_eit.rpd  ra8d1_eit.sbd  ra8d1_eit.srec  sources.mk
Debug/ra/fsp/src/bsp/cmsis/Device/RENESAS/Source/: startup.d  startup.o.in  subdir.mk  system.d  system.o.in
Debug/ra/fsp/src/bsp/mcu/all/: bsp_clocks.d  bsp_clocks.o.in  bsp_common.d  bsp_common.o.in  bsp_delay.d  bsp_delay.o.in  bsp_group_irq.d  bsp_group_irq.o.in  bsp_guard.d  bsp_guard.o.in  bsp_io.d  bsp_io.o.in  bsp_ipc.d  bsp_ipc.o.in  bsp_irq.d  bsp_irq.o.in  bsp_macl.d  bsp_macl.o.in  bsp_ospi_b.d  bsp_ospi_b.o.in  bsp_register_protection.d  bsp_register_protection.o.in  bsp_sbrk.d  bsp_sbrk.o.in  bsp_sdram.d  bsp_sdram.o.in  bsp_security.d  bsp_security.o.in  subdir.mk
Debug/ra/fsp/src/bsp/mcu/ra8d1/: bsp_linker.d  bsp_linker.o.in  subdir.mk
Debug/ra/fsp/src/r_ioport/: r_ioport.d  r_ioport.o.in  subdir.mk
Debug/ra/fsp/src/r_sci_b_spi/: r_sci_b_spi.d  r_sci_b_spi.o.in  subdir.mk
Debug/ra/fsp/src/r_sci_b_uart/: r_sci_b_uart.d  r_sci_b_uart.o.in  subdir.mk
Debug/ra_gen/: common_data.d  common_data.o.in  hal_data.d  hal_data.o.in  main.d  main.o.in  pin_data.d  pin_data.o.in  subdir.mk  vector_data.d  vector_data.o.in
Debug/src/: hal_entry.d  hal_entry.o.in  hal_warmstart.d  hal_warmstart.o.in  subdir.mk
cmake/: arm-none-eabi-gcc.cmake
doc/: e2studio_lcd_setup.md
gestures/: model.eval.json  model.joblib
gestures/session_20260717_154426/: features.csv  frames.csv  metadata.json
host/: compare_gain_waveforms.py  diagnose_invalid_routes.py  eit_binary.py  evaluate.py  gain_sweep.py  generate_eit_recon_model.py  manual_adc_scan.py  plot_adc_live.py  plot_eit_tank_live.py  plot_recon_live.py  plot_scanraw_waveforms.py  reconstruct_eit_live.py  requirements.txt  serial_lines.py  verify_eit_recon_model.py
host/gesture/: README.md  __init__.py  collect.py  features.py  model.py  recognize_live.py  torch_model.py  train_mlp.py  train_mlp_torch.py  train_mlp_v2.py
host/gestures/: model_performance.html
host/gestures/ruhmi_model/: gesture_classifier.tflite  norm_params.npz
host/gestures/ruhmi_model/gesture_savedmodel/: fingerprint.pb  saved_model.pb
host/gestures/ruhmi_model/gesture_savedmodel/variables/: variables.data-00000-of-00001  variables.index
host/gestures/ruhmi_model/ruhmi_out/gesture_classifier_CPU/deploy/: project.mdp
host/gestures/ruhmi_model/ruhmi_out/gesture_classifier_CPU/deploy/model/: input_desc.json
host/gestures/ruhmi_model/ruhmi_out/gesture_classifier_CPU/deploy_qtz/ref_qtz/: inputs.npy  outputs.npy  project.mdp
host/gestures/session_20260707_215708/: metadata.json
host/gestures/session_20260707_220027/: features.csv  frames.csv  metadata.json
host/gestures/session_20260716_183606/: metadata.json
host/gestures/session_20260716_183637/: metadata.json
host/gestures/session_20260716_185726/: metadata.json
host/gestures/session_20260716_185840/: metadata.json
host/gestures/session_20260716_185900/: metadata.json
host/gestures/session_20260716_185942/: metadata.json
host/gestures/session_20260716_190100/: metadata.json
host/gestures/session_20260716_211704/: metadata.json
host/gestures/session_20260716_211951/: features.csv  frames.csv  metadata.json
host/gestures/session_256_20_a/: frames.csv  metadata.json
host/gestures/session_256_20_a_20260717_155454/: metadata.json
host/gestures/session_256_20_a_20260717_155512/: metadata.json
host/gestures/session_256_20_a_20260717_155542/: metadata.json
host/gestures/session_256_20_a_20260717_155618/: metadata.json
host/gestures/session_256_20_a_20260717_155732/: features.csv  frames.csv  metadata.json
host/gestures/session_256_20_a_20260717_162512/: features.csv  frames.csv  metadata.json
host/gestures/session_256_20_b/: features.csv  frames.csv  metadata.json
host/gestures/session_256_20_b_20260717_163720/: features.csv  frames.csv  metadata.json
host/gestures/session_256_20_c/: metadata.json
host/gestures/session_256_20_c_20260717_165141/: features.csv  frames.csv  metadata.json
host/gestures/session_256_20_c_20260717_165825/: features.csv  frames.csv  metadata.json
host/gestures/test_20260716_214701/: features.csv  frames.csv  metadata.json
host/gestures/torch_mlp_holdout/: evaluation.json  gesture_mlp.onnx  gesture_mlp.ts  gesture_mlp_state.pt  labels.json  preprocess.json
host/gestures/torch_mlp_model/: evaluation.json  gesture_mlp.onnx  gesture_mlp.ts  gesture_mlp_state.pt  preprocess.json
host/gestures/torch_mlp_model_256_20/: evaluation.json  gesture_mlp.onnx  gesture_mlp.ts  gesture_mlp_state.pt  preprocess.json
host/web-eit/: README.md  app.js  index.html  serial_bridge.py  styles.css
ra/fsp/src/r_mipi_dsi/: r_mipi_dsi.c
ra/fsp/src/r_mipi_phy/: r_mipi_phy.c
ra_cfg/fsp_cfg/: r_sci_b_i2c_cfg.h
ra_cfg/fsp_cfg/bsp/: bsp_cfg.h  bsp_mcu_device_pn_cfg.h  bsp_mcu_family_cfg.h  bsp_pin_cfg.h
ra_gen/: bsp_clock_cfg.h  common_data.c  common_data.h  hal_data.c  hal_data.h  pin_data.c  vector_data.c  vector_data.h
script/: bsp_linker_info.h  fsp_gen.ld
src/: eit_board.c  eit_board.h  eit_gesture_icon_masks.h  eit_gesture_icons.c  eit_gesture_icons.h  eit_lcd.c  eit_lcd.h  eit_lcd_panel.h  eit_lcd_panel_mipi2.c  eit_recon.c  eit_recon.h  eit_recon_model.c  eit_recon_model.h  eit_sdram.c  eit_sdram.h  eit_ui.c  eit_ui.h  hal_entry.c
stm32g431_sin/: .mxproject  CMakeLists.txt  stm32g431_sin.ioc
stm32g431_sin/Core/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
stm32g431_sin/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
stm32g431_sin/cmake/stm32cubemx/: CMakeLists.txt
